# protection-report

./: AGENTS.md  CONTEXT.md  LICENSE  README.md  SECURITY.md  protection_report.py  pyproject.toml
.github/workflows/: ci.yml
docs/agents/: domain.md  issue-tracker.md
protection_report/: __init__.py  __main__.py  breach.py  models.py  parsers.py  report.py
tests/: test_parsers.py
tests/fixtures/: blackbird_positive.json  enola_positive.json  maigret_positive.json  naminter_positive.json  sherlock_positive.json  vesper_positive.json
