[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "protection-report"
version = "1.0.0"
description = "Generate OSINT identity exposure reports"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["requests"]

[project.scripts]
protection-report = "protection_report.__main__:main"

[tool.setuptools]
packages = ["protection_report"]
